Feat: Añadir .md a enlaces

--- a/202506042027.md
+++ b/202506042027.md
@@ -1,8 +1,8 @@
 # prototipar utopías
 
-Prototipar utopías es una forma de [pensar-actuar](202506042025), es decir, una forma de pensar con acciones e interacciones. El conocimiento y la transformación de una situación van emergiendo simultáneamente a través de ciclos iterativos de definición y aplicación rápida de prototipos en el mundo. Una vez que has llegado a un prototipo exitoso respecto al problema que quieres resolver (y con las iteraciones lo has definido mejor, es decir, tienes una teoría sobre el problema), te enfrentas a nuevos retos, «problemas felices»: cómo escalarlo, cómo adaptarlo a otros contextos, cómo optimizarlo, entre otros. Y así sigues, ideando, implementando, probando y documentando como un proceso de pensar a través de la acción.
+Prototipar utopías es una forma de [pensar-actuar](202506042025.md), es decir, una forma de pensar con acciones e interacciones. El conocimiento y la transformación de una situación van emergiendo simultáneamente a través de ciclos iterativos de definición y aplicación rápida de prototipos en el mundo. Una vez que has llegado a un prototipo exitoso respecto al problema que quieres resolver (y con las iteraciones lo has definido mejor, es decir, tienes una teoría sobre el problema), te enfrentas a nuevos retos, «problemas felices»: cómo escalarlo, cómo adaptarlo a otros contextos, cómo optimizarlo, entre otros. Y así sigues, ideando, implementando, probando y documentando como un proceso de pensar a través de la acción.
 
 A partir de la práctica de los prototipos es posible implementar una teoría en la práctica, aprender de ella, mejorar, prototipar de nuevo, etcétera; hasta lograr un estado de cosas deseable.
 
-Esta idea presupone que es posible usar los procesos de [pensamiento de diseño](202506042034) de forma iterativa para resolver problemas estructurales complejos, pensados a gran escala.
+Esta idea presupone que es posible usar los procesos de [pensamiento de diseño](202506042034.md) de forma iterativa para resolver problemas estructurales complejos, pensados a gran escala.
 
