--- a/202506042053.md
+++ b/202506042053.md
@@ -2,7 +2,7 @@
 
 ¿Cómo podríamos crear y mantener comunidades dedicadas al disfrute de las cosas basadas en el principio de «a cada cual según su necesidad, cada quien según su capacidad»? [ver ]
 
-En el capitalismo, el valor más perseguido de las cosas es su valor de cambio, el valor que adquieren en el mercado. Esto motiva muchas de las prácticas más rapaces, desde la [acumulación por desposesión](202506042103), el ecocidio, la desigualdad opresiva, la explotación, hasta la cultura del consumismo desmedido
+En el capitalismo, el valor más perseguido de las cosas es su valor de cambio, el valor que adquieren en el mercado. Esto motiva muchas de las prácticas más rapaces, desde la [acumulación por desposesión](202506042103.md), el ecocidio, la desigualdad opresiva, la explotación, hasta la cultura del consumismo desmedido
 
 Pero si valor más importante fuera el valor de uso, el valor de difrute, podríamos contribuir a resolver muchos de esos problemas.
 
